syntax = "proto3";

package helloworld;

message HelloRequest {
	string name = 1;
}

message HelloResponse {
	string greeting = 1;
}

service HelloWorldService {
	rpc HelloWorld (HelloRequest) returns (HelloResponse);
}
